--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,12 +23,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Install and test backend
-        working-directory: backend
-        run: |
-          npm ci
-          npm test
-
       - name: Install dependencies for frontend
         working-directory: frontend
         run: |
@@ -37,3 +31,9 @@ jobs:
       - name: Install Playwright browsers
         working-directory: frontend
         run: npx playwright install --with-dep
+
+      - name: Install and test backend
+        working-directory: backend
+        run: |
+          npm ci
+          npx jest --detectOpenHandles
