--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,8 +32,18 @@ jobs:
         working-directory: frontend
         run: npx playwright install --with-deps
 
-      - name: Install and test backend
+      - name: Test frontend
+        working-directory: frontend
+        run: |
+          npm ci
+          npx playwright test
+
+      - name: Install dependencies for backend
         working-directory: backend
         run: |
           npm ci
+      
+      - name: Test backend
+        working-directory: backend
+        run: |
           npx jest --detectOpenHandles
